--- a/src/assets/style/components/pages/home/_bigTitle.scss
+++ b/src/assets/style/components/pages/home/_bigTitle.scss
@@ -7,6 +7,8 @@
     top: -60px;
     left: -65px;
     width: 420px;
+    max-height: 429px;
+    object-fit: scale-down;
 }
 .big-title__flower-img {
     position: absolute;
@@ -27,6 +29,12 @@
         }
         p {
             color: $secondary-color;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: initial;
+            display: -webkit-box;
+            -webkit-line-clamp: 4;
+            -webkit-box-orient: vertical;
         }
         button {
             border: 2px solid #50a433;
